--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.cc.dc.ui.main.activity.MainActivity">
+        <activity android:name="com.cc.dc.ui.common.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
