--- a/memorytraining/src/main/AndroidManifest.xml
+++ b/memorytraining/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.home.activity.NumberCodeTestActivity"/>
+
+        <activity android:name=".ui.home.activity.PilePathActivity"/>
     </application>
 
 </manifest>
