--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     // https://github.com/hdodenhof/CircleImageView
     compile 'de.hdodenhof:circleimageview:2.2.0'
+    // https://github.com/vinc3m1/RoundedImageView
+    compile 'com.makeramen:roundedimageview:2.3.0'
 }
