--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -23,10 +23,10 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile project(':common')
-
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     // https://github.com/hdodenhof/CircleImageView
     compile 'de.hdodenhof:circleimageview:2.2.0'
     // https://github.com/vinc3m1/RoundedImageView
     compile 'com.makeramen:roundedimageview:2.3.0'
+    compile 'com.android.support:design:25.3.1'
 }
