--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+
 .idea/
-/.idea/misc.xml
-/.idea
-/.idea/grandle_extensions.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/grandle_extensions.xml
+.idea/workspace.xml
+.idea/libraries
