--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.common.activity.AboutActivity"/>
+        <activity android:name=".ui.common.activity.TestActivity"/>
     </application>
 
 </manifest>
