--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -17,10 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories {
+        flatDir {
+            dirs 'libs'   // aar目录
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+//    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile project(':common')
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
@@ -29,4 +35,6 @@ dependencies {
     // https://github.com/vinc3m1/RoundedImageView
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.android.support:design:25.3.1'
+
+    compile(name:'AliyunPlayer', ext: 'aar')
 }
