--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,15 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    minSdkVersion = 14
+    targetSdkVersion = 25
+
+    buildToolsVersion = '27.0.1'
+    supportLibVersion = '25.3.1'
+    compileSdkVersion = 26
+
+    appCompat = "com.android.support:appcompat-v7:$supportLibVersion"
+    recyclerView = "com.android.support:recyclerview-v7:$supportLibVersion"
+}
