AIDL的一些测试

--- a/customview/src/main/AndroidManifest.xml
+++ b/customview/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         </activity>
 
         <activity android:name=".activity.TestAnimationActivity"/>
+
+        <activity android:name=".activity.TestAsyncTaskActivity"/>
     </application>
 
 </manifest>
