简单封装下断网、加载中、数据为空不同状态的切换

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -27,10 +27,11 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ui.common.activity.AboutActivity"/>
-        <activity
-            android:name=".ui.common.activity.TestActivity"/>
+        <activity android:name=".ui.common.activity.AboutActivity"/>
+
+        <activity android:name=".ui.common.activity.TestActivity"/>
+
+        <activity android:name=".ui.common.activity.EmptyNetErrorActivity"/>
 
         <!-- 直播视频播放 -->
         <activity
