--- a/customview/src/main/AndroidManifest.xml
+++ b/customview/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true" android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.TestPlayerActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
