--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.59.android'
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    // 万能Adapter
+    compile 'com.zhy:base-rvadapter:3.0.3'
 }
