--- a/customview/build.gradle
+++ b/customview/build.gradle
@@ -12,7 +12,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -42,4 +42,6 @@ dependencies {
     compile project(':common')
 
     compile 'com.hannesdorfmann:adapterdelegates3:3.0.1'
+
+    compile 'com.gongwen:marqueelibrary:1.1.3'
 }
