--- a/kotlindemo/build.gradle
+++ b/kotlindemo/build.gradle
@@ -5,7 +5,6 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
-
     defaultConfig {
         applicationId "com.cc.dc.kotlindemo"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -36,4 +35,6 @@ dependencies {
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile project(':common')
+
+    compile 'com.hannesdorfmann:adapterdelegates3:3.0.1'
 }
