--- a/kotlindemo/build.gradle
+++ b/kotlindemo/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
@@ -27,14 +28,11 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.1.0'
-    testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    compile rootProject.ext.appCompat
+    compile rootProject.ext.recyclerView
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile project(':common')
-
     compile 'com.hannesdorfmann:adapterdelegates3:3.0.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    kapt "com.jakewharton:butterknife-compiler:8.5.1"
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
