添加网络数据转换的测试code

--- a/kotlindemo/src/main/AndroidManifest.xml
+++ b/kotlindemo/src/main/AndroidManifest.xml
@@ -14,14 +14,15 @@
         tools:overrideLibrary="com.cc.dc.common"
         android:name=".KotlinApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.TestActivity"/>
     </application>
 
 </manifest>
