--- a/kotlindemo/src/main/AndroidManifest.xml
+++ b/kotlindemo/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
 
         <activity android:name=".activity.TestActivity"/>
+
+        <activity android:name=".activity.PullRefreshActivity"/>
     </application>
 
 </manifest>
