--- a/kotlindemo/build.gradle
+++ b/kotlindemo/build.gradle
@@ -38,14 +38,17 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     compile 'com.alibaba:fastjson:1.1.68.android'
-
-
-//    // https://github.com/trello/RxLifecycle
+    //    // https://github.com/trello/RxLifecycle
     compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
-//    // If you want pre-written Activities and Fragments you can subclass as providers
+    //    // If you want pre-written Activities and Fragments you can subclass as providers
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
-//    // If you want to use Kotlin syntax
-//    compile 'com.trello.rxlifecycle2:rxlifecycle-kotlin:2.2.1'
-//    // If you want to use Kotlin syntax with Android Lifecycle
-//    compile 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:2.2.1'
+    //    // If you want to use Kotlin syntax
+    //    compile 'com.trello.rxlifecycle2:rxlifecycle-kotlin:2.2.1'
+    //    // If you want to use Kotlin syntax with Android Lifecycle
+    //    compile 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:2.2.1'
+
+    compile 'commons-codec:commons-codec:1.4'
+    compile 'commons-logging:commons-logging:1.1.1'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'org.apache.httpcomponents:httpclient:4.3.6'
 }
