--- a/kotlindemo/src/main/AndroidManifest.xml
+++ b/kotlindemo/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:overrideLibrary="com.cc.dc.common"
         android:name=".KotlinApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".module.coinbig.activity.CoinBigTradeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
